--- a/.github/workflows/backend-cd.yml
+++ b/.github/workflows/backend-cd.yml
@@ -26,7 +26,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -f Docker-backend -t ghcr.io/${{ github.repository }}:latest .
+          docker build -f Dockerfile-backend -t ghcr.io/${{ github.repository }}:latest .
 
       - name: Push Docker image
         run: |
